// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diff tests Diff rendering no whitespace 1`] = `
<div
  class=""
>
  <div
    class="diff-headers"
  >
    <div
      class="header"
    >
      
    </div>
     
    <div
      class="header right-header"
    >
      
      
      
      <div
        class="fullscreen-icon"
      >
        <i
          class="fas fa-expand"
        />
      </div>
    </div>
  </div>
   
  <div
    class="diff-body-wrapper"
    style="max-height: 100%;"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="diff-body"
    >
      <tbody>
        <tr>
          <td
            class="line-num"
          >
            
            1
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            1
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            2
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            2
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            3
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left one

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            4
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left two

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            5
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left three

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            6
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            3
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num"
          >
            
            4
          
          </td>
           
          <td
            class="positive code-cell"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right one

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num"
          >
            
            5
          
          </td>
           
          <td
            class="positive code-cell"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right two

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            7
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            6
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            8
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            7
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five

            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
   
  <div
    class="toggle-container"
  >
    <div
      class="toggle-button-space"
    >
      <div
        class="inactive-option-style on-border cursor-pointer"
      >
        
        Show Whitespace
      
      </div>
       
      <div
        class="active-option-style off-border"
        style="background-color: slategray;"
      >
        
        Hide Whitespace
      
      </div>
    </div>
  </div>
</div>
`;

exports[`Diff tests Diff rendering with whitespace snapshot 1`] = `
<div
  class=""
>
  <div
    class="diff-headers"
  >
    <div
      class="header"
    >
      
    </div>
     
    <div
      class="header right-header"
    >
      
      
      
      <div
        class="fullscreen-icon"
      >
        <i
          class="fas fa-expand"
        />
      </div>
    </div>
  </div>
   
  <div
    class="diff-body-wrapper"
    style="max-height: 100%;"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="diff-body"
    >
      <tbody>
        <tr>
          <td
            class="line-num"
          >
            
            1
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one\\r
↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            1
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one\\r
↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            2
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            2
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            3
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left∙one↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            4
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left∙two↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            5
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left∙three↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            6
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            3
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num"
          >
            
            4
          
          </td>
           
          <td
            class="positive code-cell"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right∙one↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num"
          >
            
            5
          
          </td>
           
          <td
            class="positive code-cell"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right∙two↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            7
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            6
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            8
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five↵

            </span>
          </td>
           
          <td
            class="line-num"
          >
            
            7
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five↵

            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
   
  <div
    class="toggle-container"
  >
    <div
      class="toggle-button-space"
    >
      <div
        class="active-option-style on-border"
        style="background-color: slategray;"
      >
        
        Show Whitespace
      
      </div>
       
      <div
        class="inactive-option-style off-border"
        style=""
      >
        
        Hide Whitespace
      
      </div>
    </div>
  </div>
</div>
`;
